--- a/static/css/reader.less
+++ b/static/css/reader.less
@@ -13,17 +13,6 @@ body {
 #reader {
     display: none;
     
-    #story_body_container {
-        position: absolute;
-        top: 0px;
-        bottom: 0px;
-        left: 0px;
-        right: 0px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        -webkit-tap-highlight-color: rgba(0,0,0,0);
-    }
-
     #story_body {
         position: absolute;
         top: 0px;
@@ -33,8 +22,8 @@ body {
         padding-bottom: 0px;
         padding-left: 0px;
         padding-right: 0px;
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin-top: 0px;
+        margin-bottom: 0px;
         width: 100%;
         overflow: hidden;
         font-size: 16px;
@@ -50,6 +39,8 @@ body {
             display: inline-block;
             vertical-align: top;
             white-space: normal;
+            padding-top: 10px;
+            padding-bottom: 10px;
         
             padding-left: 10px;
             padding-right: 10px;
@@ -134,8 +125,85 @@ body {
             }
         }
         .end_story_page {
+            position: relative;
+            padding-left: 0px;
+            padding-right: 0px;
+            padding-top: 0px;
+            padding-bottom: 0px;
+            font-size: 18px;
+            font-family: 'Helvetica Neue','Helvetica',sans-serif;
+            @media (-webkit-min-device-pixel-ratio: 2) {
+                font-weight: lighter;
+            }
+            
             .top_box {
-                width: 100%;
+                padding-top: 20px;
+                padding-bottom: 20px;
+                border-bottom: 2px solid #333;
+
+                .top_line {
+                    padding-left: 60px;
+                    text-align: left;
+                }
+                .story_title {
+                    font-weight: bold;
+                    @media (-webkit-min-device-pixel-ratio: 2) {
+                        font-weight: normal;
+                    }
+                    text-align: center;
+                }
+                .story_author_one {
+                    text-align: center;
+                }
+            }
+            .rating_box {
+                padding-top: 20px;
+                padding-bottom: 20px;
+                border-bottom: 2px solid #333;
+                .stars {
+                    text-align: center;
+                    polygon {
+                        stroke: @icon_inactive;
+                    }
+                    .selected polygon {
+                        stroke: @iphone_blue;
+                        fill: @iphone_blue;
+                    }
+                }
+                .text {
+                    text-align: center;
+                }
+            }
+            .share_box {
+                text-align: center;
+            }
+            .next_box {
+                position: absolute;
+                left: 0px;
+                right: 0px;
+                bottom: 0px;
+                padding-top: 20px;
+                padding-bottom: 20px;
+                border-top: 2px solid #333;
+
+                .top_line {
+                    padding-left: 60px;
+                    text-align: left;
+                }
+                .story_title {
+                    font-weight: bold;
+                    @media (-webkit-min-device-pixel-ratio: 2) {
+                        font-weight: normal;
+                    }
+                    text-align: center;
+                }
+                .story_subtitle {
+                    font-style: italic;
+                    text-align: center;
+                }
+                .story_author_one {
+                    text-align: center;
+                }
             }
         }
     }
