--- a/views/frag_reader.html
+++ b/views/frag_reader.html
@@ -3,7 +3,7 @@
         <div id='paged_story'>
         </div>
     </div>
-    <div id='top_bar'>
+    <div id='top_bar' class='overlay_ui'>
         <div class='title_bar' onclick='clickTitleBar();'>
             <div class='current_title'></div>
         </div>
@@ -28,10 +28,10 @@
             </div>
         </div>
     </div>
-    <div id='bottom_bar'>
+    <div id='bottom_bar' class='overlay_ui'>
         <div class='icon_bar'>
             <div class='icon text_settings' onclick='clickTextSettings();'><div class='text'>Aa</div></div>
-            <div class='icon rate'>
+            <div class='icon rate' onclick='clickRateStory();'>
                 <svg enable-background="new 0 0 50 50" height="50px" id="Layer_1" version="1.1" viewBox="0 0 50 50" width="50px" x="0px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" y="0px">
                     <polygon fill="none" points="25,3.553 30.695,18.321 46.5,19.173   34.214,29.152 38.287,44.447 25,35.848 11.712,44.447 15.786,29.152 3.5,19.173 19.305,18.321 " stroke="#000000" stroke-miterlimit="10" stroke-width="2"/>
                 </svg>
@@ -53,7 +53,7 @@
         <div class='tracker_bar'>
         </div>
     </div>
-    <div id='text_settings'>
+    <div id='text_settings' class='overlay_ui'>
         <div class='font_size'>
             <div class='button smaller' onclick='clickFontSmaller();'>
                 <div class='text'>Aa</div>
@@ -113,6 +113,36 @@
                 </div>
                 <div class='label'>Midnight</div>
             </div>
+        </div>
+    </div>
+    <div id='rating_bar' class='overlay_ui'>
+        <div class='label'>Rate this Story</div>
+        <div class='stars'>
+            <span id="star_1">
+                <svg enable-background="new 0 0 50 50" height="50px"  version="1.1" viewBox="0 0 50 50" width="50px" x="0px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" y="0px">
+                        <polygon fill="none" points="25,3.553 30.695,18.321 46.5,19.173   34.214,29.152 38.287,44.447 25,35.848 11.712,44.447 15.786,29.152 3.5,19.173 19.305,18.321 " stroke="#000000" stroke-miterlimit="10" stroke-width="2"/>
+                </svg>
+            </span>
+            <span id="star_2">
+                <svg enable-background="new 0 0 50 50" height="50px"  version="1.1" viewBox="0 0 50 50" width="50px" x="0px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" y="0px">
+                        <polygon fill="none" points="25,3.553 30.695,18.321 46.5,19.173   34.214,29.152 38.287,44.447 25,35.848 11.712,44.447 15.786,29.152 3.5,19.173 19.305,18.321 " stroke="#000000" stroke-miterlimit="10" stroke-width="2"/>
+                </svg>
+            </span>
+            <span id="star_3">
+                <svg enable-background="new 0 0 50 50" height="50px"  version="1.1" viewBox="0 0 50 50" width="50px" x="0px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" y="0px">
+                        <polygon fill="none" points="25,3.553 30.695,18.321 46.5,19.173   34.214,29.152 38.287,44.447 25,35.848 11.712,44.447 15.786,29.152 3.5,19.173 19.305,18.321 " stroke="#000000" stroke-miterlimit="10" stroke-width="2"/>
+                </svg>
+            </span>
+            <span id="star_4">
+                <svg enable-background="new 0 0 50 50" height="50px"  version="1.1" viewBox="0 0 50 50" width="50px" x="0px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" y="0px">
+                        <polygon fill="none" points="25,3.553 30.695,18.321 46.5,19.173   34.214,29.152 38.287,44.447 25,35.848 11.712,44.447 15.786,29.152 3.5,19.173 19.305,18.321 " stroke="#000000" stroke-miterlimit="10" stroke-width="2"/>
+                </svg>
+            </span>
+            <span id="star_5">
+                <svg enable-background="new 0 0 50 50" height="50px"  version="1.1" viewBox="0 0 50 50" width="50px" x="0px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" y="0px">
+                        <polygon fill="none" points="25,3.553 30.695,18.321 46.5,19.173   34.214,29.152 38.287,44.447 25,35.848 11.712,44.447 15.786,29.152 3.5,19.173 19.305,18.321 " stroke="#000000" stroke-miterlimit="10" stroke-width="2"/>
+                </svg>
+            </span>
         </div>
     </div>
 </div>
