--- a/static/css/reader.less
+++ b/static/css/reader.less
@@ -549,6 +549,7 @@ body {
                     }
                 }
                 &.selected svg polygon {
+                    stroke: @iphone_blue;
                     fill: @iphone_blue;
                 }
             }
