--- a/static/templates/end_story_page.ejs
+++ b/static/templates/end_story_page.ejs
@@ -39,10 +39,8 @@
     </div>
     <div class='next_box'>
         <div class='top_line'>Swipe to read...</div>
-        <div class='story_title'><%= next_story.title %></div>
-        <% if( next_story.subtitle ) { %>
-            <div class='story_subtitle'><%= next_story.subtitle %></div>
-        <% } %>
-        <div class='story_author_one'><%= next_story.author_list[0] %></div>
+        <div class='next_story_title'>The Next Story</div>
+        <div class='next_story_subtitle'></div>
+        <div class='next_story_author_one'></div>
     </div>
 </div>
