--- a/views/frag_reader.html
+++ b/views/frag_reader.html
@@ -5,7 +5,7 @@
     </div>
     <div id='top_bar' class='overlay_ui'>
         <div class='title_bar' onclick='clickTitleBar();'>
-            <div class='current_title'></div>
+            <div class='story_title'></div>
         </div>
         <div class='nav_bar'>
             <div class='prev' onclick='readerPrev();'>
@@ -116,7 +116,8 @@
         </div>
     </div>
     <div id='rating_bar' class='overlay_ui'>
-        <div class='label'>Rate this Story</div>
+        <div class='story_title'></div>
+        <div class='story_author_one'></div>
         <div class='stars'>
             <span id="star_1">
                 <svg enable-background="new 0 0 50 50" height="50px"  version="1.1" viewBox="0 0 50 50" width="50px" x="0px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" y="0px">
