--- a/static/css/reader.less
+++ b/static/css/reader.less
@@ -508,6 +508,7 @@ body {
             overflow-x: auto;
             border-top: 1px solid #bbb;
             border-bottom: 1px solid #bbb;
+            text-align: center;
             
             .item {
                 display: inline-block;
@@ -635,7 +636,7 @@ body.theme_midnight {
         #top_bar {
             background: black;
             
-            .title_bar .current_title {
+            .title_bar .story_title {
                 color: white;
             }
         }
@@ -651,6 +652,13 @@ body.theme_midnight {
                 .text {
                     color: white;
                 }
+            }
+        }
+        #rating_bar {
+            background: black;
+            
+            .story_title, .story_author_one {
+                color: white;
             }
         }
     }
