--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
 <body>
     <h1>Welcome to bluewell</h1>
     <hr/>
-    <a href='#' onclick="document.location.href='/auth/facebook';">Login with Facebook</a>
+    <button onclick="document.location.href='/auth/facebook';">Login with Facebook</button>
 
     <% include frag_ga.html %>
 </body>
