--- a/views/privacy.html
+++ b/views/privacy.html
@@ -15,13 +15,17 @@
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type="text/javascript"></script>
     <script src="/js/string.utils.js" type="text/javascript"></script>
     <script src="/js/common.js" type="text/javascript"></script>
+
+    <script type="text/javascript">
+        if( window.location.hash == '#_=_' )
+        {
+            window.location.hash = '';
+        }
+    </script>
 </head>
 <body>
-    <h1>Welcome to bluewell</h1>
+    <h1>Privacy Policy</h1>
     <hr/>
-    <button onclick="document.location.href='/auth/facebook';">Login with Facebook</button><br/>
-    <br/>
-    <button onclick="document.location.href='/auth/google';">Login with Google</button>
-
+    <p>We keep everyting private and anonymous.</p>
     <% include frag_ga.html %>
 </body>
